--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="./assets/icon.jpeg" />
+    <!-- <link rel="icon" type="image/jpeg" href="./assets/icon.jpeg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trivia Master - Test Your Knowledge</title>
+    <title>Brain Battle - Test Your Brain Strength</title>
   </head>
   <body>
     <div id="root"></div>
